[package]
name = "yellowpages-proof-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
bitcoin = "0.32.5"
serde_json = "1.0"
ml-dsa = "0.0.4"
tower-http = { version = "0.6.2", features = ["cors"] }
pq_address = "0.1.1"

[dev-dependencies]
rand = "0.9.1"
serial_test = "3.2.0"
