[package]
name = "yellowpages-proof-service"
version = "0.1.0"
edition = "2024"

[dependencies]
slh-dsa = "0.0.3"
axum = { version = "0.8.3", features = ["ws"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
], default-features = false }
base64 = "0.22"
bitcoin = "0.32.5"
serde_json = "1.0"
ml-dsa = "0.0.4"
tower-http = { version = "0.6.2", features = ["cors"] }
pq_address = "0.2.0"
ml-kem = "0.2.1"
rand = "0.8.5"
aes-gcm = "0.10.3"
axum-helmet = "0.2.0"
env_logger = "0.11.8"
log = "0.4.27"
tower = { version = "0.5.2", features = ["limit", "buffer", "load-shed"] }
tower_governor = "0.7.0"

[dev-dependencies]
serial_test = "3.2.0"
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
mockito = "1.7.0"
